packages/parser/tests/snapshots/fixtures__fixtures@verbatim-2.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse_unfolded(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/verbatim-2.mg
---
body:
  - kind:
      Marker:
        depth: 1
        kind: UnorderedList
    children:
      - kind: Paragraph
        children:
          - kind:
              Text: A list item
        span:
          start: 4
          end: 15
          start_line: 1
          end_line: 1
      - kind:
          Delimiter: Verbatim
        attributes:
          entries:
            - value: python
        children:
          - kind:
              Raw: "def greet(name):"
          - kind:
              Raw: "  print(f\"Hello, {name}!\")"
        span:
          start: 18
          end: 80
          start_line: 2
          end_line: 5
    span:
      start: 0
      end: 82
      start_line: 0
      end_line: 6
    fence:
      start: 0
      end: 1
      start_line: 0
      end_line: 0
