packages/parser/tests/snapshots/fixtures__fixtures@whitespace.mg.snap
---
source: packages/parser/tests/fixtures.rs
expression: "parse(&std::fs::read_to_string(path).unwrap())"
input_file: packages/parser/tests/fixtures/whitespace.mg
---
meta: ~
body:
  - kind:
      Marker:
        depth: 1
        kind: Heading
    children:
      - kind:
          Text: My heading
  - kind:
      Marker:
        depth: 1
        kind: Heading
    children:
      - kind:
          Text: My heading
